2006-04-05  Nathaniel Smith  <njs@pobox.com>

	* sanity.cc (dump_buffer): Make the "discarding debug log"
	slightly more informative.

2006-04-05  Nathaniel Smith  <njs@pobox.com>

	* ui.{cc,hh}: Use the prog_name in output.
	* app_state.cc (app_state::prog_name): Change default to 'mtn'.
	Set the global ui object's prog_name whenever our prog_name is
	set.
	* monotone.cc (cpp_main): Use the new prog_name setter.

2006-04-05  Nathaniel Smith  <njs@pobox.com>

	* monotone.cc (cpp_main): MM() our command line, LC_ALL, and full
	version, so that they are always included in dump and debug
	files.

2006-04-04  Nathaniel Smith  <njs@pobox.com>

	* mt_version.{cc,hh} (get_version, get_full_version): New
	functions.  Also tweak --full-version output for readability.

2006-04-04  Nathaniel Smith  <njs@pobox.com>

	* mt_version.cc (print_full_version): Include compiler
	vendor/version, c++ stdlib vendor/version, and boost version in
	--full-version output.

2006-04-04  Nathaniel Smith  <njs@pobox.com>

	* Makefile.am: Yet another try at the package full revision stuff;
	hopefully this version still works just as well as the old
	versions, while also getting rid of the repeated "Generated from
	cached data" messages.

2006-04-05  Lapo Luchini  <lapo@lapo.it>

	* po/it.po: Changed "in/out" translations as graphical arrows.

2006-04-04  Matt Johnston  <matt@ucc.asn.au>

	* tests/t_rosterify_empty_manifest.at: a test for rosterifying a db
	that has empty manifests

2006-04-04  Matt Johnston  <matt@ucc.asn.au>

	* revision.cc (construct_revisions_from_ancestry): all rosters must be
	given a root node, even if all files have been dropped.

2006-04-04  Matt Johnston  <matt@ucc.asn.au>

	* database.cc (database::dump): don't check schema of the db.

2006-04-04  Nathaniel Smith  <njs@pobox.com>

	* roster.hh (class roster_t): Add massive comment about roster_t's
	location tracking stuff.  Conclusion: it is a little icky, but